--- a/style.scss
+++ b/style.scss
@@ -5,7 +5,7 @@
 
 body {
     height: 100vh;
-    background: linear-gradient(rgb(129, 80, 80),rgb(245, 165, 241));
+    background-color: #bb767a;
     display: grid;
     place-items: center;
 }
