--- a/_assets/scss/style.scss
+++ b/_assets/scss/style.scss
@@ -21,7 +21,7 @@ body {
 
 .fill {
     position: relative;
-    background-image: url("/_static/dist/images/latte.jpg");
+    background-image: url("https://sisen-rayu.github.io/intera6_drag/images/latte.jpg");
     width: 250px;
     height: 250px;
     background-size: cover;
